rest/rest-service.yaml
#
# The original Google demo depended on gaving a service "redis-master" AND
# a service "redis-slave". We're using a single redis server, so we create
# two services that point to the same pod.
#
#
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app: rest
    tier: backend
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: rest
