rest/rest-ingress.yaml
#
# The original Google demo depended on gaving a service "redis-master" AND
# a service "redis-slave". We're using a single redis server, so we create
# two services that point to the same pod.
# networking.k8s.io/v1beta1
# nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# nginx.ingress.kubernetes.io/use-regex: "true"
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  #namespace: sentiment
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rest
              port:
                number: 5000
